# montadorSB

./: CMakeLists.txt  CommandOperations.cpp  CommandOperations.h  ErrorLib.cpp  ErrorLib.h  InstructionInfo.cpp  InstructionInfo.h  LabelParse.cpp  LabelParse.h  MacroLibrary.cpp  MacroLibrary.h  Montador.cpp  Montador.h  ParseLib.cpp  ParseLib.h  PreProcessamento.cpp  PreProcessamento.h  TabelaLib.cpp  TabelaLib.h  TabelaSimbolos.cpp  TabelaSimbolos.h  Tokenizer.cpp  Tokenizer.h  blabla.mcr  blabla.pre  main.cpp
files/: entrada_teste  entrada_teste_if_equ  saida_teste.mcr  saida_teste.pre
testes/: teste.cpp
